fix search block not responsive and not same in frontend

--- a/src/editor/blocks/search/styles/style.scss
+++ b/src/editor/blocks/search/styles/style.scss
@@ -1,3 +1,4 @@
 .gutenverse-search-form{
     display: flex;
+    flex-wrap: wrap;
 }
